# autocue

./: .autocue.default.yaml  .gitignore  CLAUDE.md  LICENSE  PERFORMANCE_ANALYSIS.md  PERFORMANCE_ANALYSIS_FRESH.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_SUMMARY.md  PROFILING.md  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
examples/: profile_tracking.py
samples/: evening_news_broadcast.md  maths_explained.md  number_test_script.md  sample_script.md  tech_product_launch.md  tutorial_how_to_bake_bread.md
src/autocue/: __init__.py  audio.py  config.py  debug_log.py  debug_transcript.py  expansion_matcher.py  main.py  number_expander.py  profiling.py  script_parser.py  server.py  threaded_tracker.py  tracker.py  transcribe.py  transcription_provider.py
src/autocue/providers/: __init__.py  sherpa_provider.py  vosk_provider.py
src/autocue/static/: index.html
tests/: __init__.py  conftest.py  test_config.py  test_debug_log.py  test_jump_fix.py  test_model_caching.py  test_model_file_finding.py  test_number_expander.py  test_performance.py  test_prompting_reset.py  test_script_parser.py  test_server.py  test_sherpa_provider.py  test_tracker.py  test_tracker_comprehensive.py  test_transcribe.py  test_transcript.py
tests/integration/: __init__.py  test_tracking_with_transcripts.py
tests/parser/: __init__.py  test_markdown.py  test_number_expansion.py  test_parsing.py  test_punctuation_expansion.py
tests/tracker/: __init__.py  test_api.py  test_backtrack.py  test_basic_matching.py  test_caching.py  test_comprehensive.py  test_expansion_matching.py  test_filler_words.py  test_skip_headers.py  test_threaded_tracker.py  test_validation.py
tests/utilities/: __init__.py  test_debug_log.py  test_debug_transcript.py  test_transcript_saving.py
transcripts/: transcript_20251221_000011.txt
